# isom350-blog

./: README.md  db.sqlite3  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_publish_on.py
blog/templates/: ahmed.html  base.html  confirm.html  create_post.html  edit_post.html  greet.html  hello_world.html  homepage.html  post_detail.html  post_list.html  posts.html
mysite/: settings.py  urls.py
templates/: base.html
