[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-bootstrap-datepicker-plus = "^3.0.5"
django-bootstrap4 = "^3.0.1"
[tool.poetry.dev-dependencies]
